# C-Projects

./: README.md
Lab1_TEP/: CMakeLists.txt  main.cpp
Lab1_TEP/Zad1/: allocateFillTable.cpp  allocateFillTable.h  allocateFillTable_const.h
Lab1_TEP/Zad2/: allocateTable2Dim.cpp  allocateTable2Dim.h
Lab1_TEP/Zad3/: deallocateTable2Dim.cpp  deallocateTable2Dim.h
Lab1_TEP/Zad4/: CTable.cpp  CTable.h  CTable_const.h
Lab2_TEP/: main.cpp
Lab2_TEP/Zad1/: CNumber.cpp  CNumber.h  CNumber_const.h
Lab3_TEP/: CConstantsTree.h  CInterfaceConstants.h  CMakeLists.txt  COperation.cpp  COperation.h  CTree.cpp  CTree.h  CUserInterface.cpp  main.cpp
